# orion

./: .gitignore  CLAUDE.md  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json
resources/: orion-web-mcp.mjs
resources/skills/accessibility-reviewer/: SKILL.md
resources/skills/advisor/: SKILL.md
resources/skills/architecture-reviewer/: SKILL.md
resources/skills/code-reviewer/: SKILL.md
resources/skills/code-simplifier/: SKILL.md
resources/skills/commit-pr-author/: SKILL.md
resources/skills/concurrency-reviewer/: SKILL.md
resources/skills/consensus/: SKILL.md
resources/skills/debugger/: SKILL.md
resources/skills/dependency-auditor/: SKILL.md
resources/skills/documentation-writer/: SKILL.md
resources/skills/migration-planner/: SKILL.md
resources/skills/performance-reviewer/: SKILL.md
resources/skills/planner/: SKILL.md
resources/skills/privacy-reviewer/: SKILL.md
resources/skills/researcher/: SKILL.md
resources/skills/security-reviewer/: SKILL.md
resources/skills/test-writer/: SKILL.md
resources/skills/ux-reviewer/: SKILL.md
resources/skills/verifier/: SKILL.md
sidecars/engine/: pyproject.toml  run_engine.py
sidecars/tools/orion_tools/: jobs.py  main.py
src/main/: index.ts
src/main/features/: agent.ts  code.ts  git.ts  models.ts  news.ts  research.ts  skills.ts
src/main/services/: agent-service.ts  app-settings.ts  engine-client.ts  engine-config.ts  git-service.ts  llm-trace.ts  logger.ts  macos-memory.ts  model-service.ts  news-scheduler.ts  paths.ts  (+12 more)
src/shared/: ipc.ts  model-tiers.ts  types.ts
(+72 files in other folders)
